codex-rs/tui/src/transcript_view/snapshots/codex_tui__transcript_view__search__tests__selection_owns_find_highlight.snap
---
source: tui/src/transcript_view/search_tests.rs
expression: "format!(\"{selected_frame:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 4 },
    content: [
        "                                ",
        "newer needle                    ",
        "                                ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
